Update permissions and enhance dialog configurations for election management, 4 bugs fixed