@@ -2,8 +2,9 @@ package net.democracycraft.elections.src.util.permissions.data;
 
 import java.io.Serializable;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
+import java.util.stream.Collectors;
 
 /**
  * Serializable configuration holder used for YAML persistence of permission nodes.
@@ -21,12 +22,16 @@ public class PermissionNodesConfig implements Serializable {
     }
 
     public void setNodes(List<String> nodes) {
-        this.nodes = nodes == null ? new ArrayList<>() : new ArrayList<>(nodes);
+        this.nodes = nodes == null ? new ArrayList<>() : nodes.stream()
+                .filter(Objects::nonNull)
+                .map(String::trim)
+                .filter(s -> !s.isEmpty())
+                .collect(Collectors.toCollection(ArrayList::new));
     }
 
     /** Creates an immutable DTO view of this config. */
     public PermissionNodesDto toDto() {
-        return new PermissionNodesDto(Collections.unmodifiableList(new ArrayList<>(nodes)));
+        return new PermissionNodesDto(List.copyOf(nodes));
     }
 
     /** Creates a config instance from a DTO. */
@@ -38,4 +43,3 @@ public class PermissionNodesConfig implements Serializable {
         return cfg;
     }
 }
-
